--- a/hw2_Edit_Test_Deploy-main/personal.html
+++ b/hw2_Edit_Test_Deploy-main/personal.html
@@ -17,13 +17,13 @@
 			<li><a href = "random.html">Random</a></li>
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		  </ul>
-	    <nav>
+	    </nav>
 		<h1>Family</h1>
 	</header>
 	
 	<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-		<img src = "wiscosin_dells.jpg" width="25" alt = "wiscosin"/>
+		<img src = "wisconsin_dells.jpg" width="25" alt = "wiscosin"/>
 		<img src = "badlands.jpg" width="1000" alt = "badlands"/>
 		<img src = "falling.jpg" width="25" alt = "falling"/>
 		<img src = "jewel_cave.jpg" width="1000" alt = "cave"/>
