--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="html5reset.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Family</title>
+	<title>Aboue Me</title>
 </head>
 <body>
 	<header>
