--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
 		<img src = "images/wisconsin_dells.jpg" alt = "wiscosin">
 		<img src = "images/badlands.jpg" alt = "badlands">
 		<img src = "images/falling.jpg" alt = "falling">
-		<img src = "images/jewel_cave.jpg" alt = "jewelcave">
+		<img src = "images/jewel_cave.JPG" alt = "jewelcave">
 		<img src = "images/rushmore.jpg" alt = "rushmore">
 	</main>
 
